<resources>
    <string name="app_name">NavDemo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_main">Main</string>
    <string name="title_sub1">Sub1</string>
    <string name="title_sub2">Sub2</string>
    <string name="title_sub3">Sub3</string>
    <string name="to_sub1">Goto Sub1</string>
    <string name="to_sub2">Goto Sub2</string>
    <string name="to_sub3">Goto Sub3</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
</resources>
